fix(styles): make unsupported notice vertically aligned

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -33,9 +33,10 @@ a {
 #noscript,
 #legacy {
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 0;
   right: 0;
+  transform: translateY(-50%);
   text-align: center;
   font-size: 2em;
 }
